Add display format option to Time Display action and update manifest

--- a/com.aurum.rust-deck.sdPlugin/manifest.json
+++ b/com.aurum.rust-deck.sdPlugin/manifest.json
@@ -24,6 +24,7 @@
 			"UUID": "com.aurum.rust-deck.time",
 			"Icon": "imgs/actions/time_dispay/icon",
 			"Tooltip": "Displays the current time from the server, updates every minute.",
+			"PropertyInspectorPath": "ui/time-display.html",
 			"Controllers": [
 				"Keypad"
 			],
