--- a/com.aurum.rust-deck.sdPlugin/manifest.json
+++ b/com.aurum.rust-deck.sdPlugin/manifest.json
@@ -40,6 +40,7 @@
 			"UUID": "com.aurum.rust-deck.server-info",
 			"Icon": "imgs/actions/server_info/icon",
 			"Tooltip": "Displays server player count, updates every 30 seconds.",
+			"PropertyInspectorPath": "ui/server-info.html",
 			"Controllers": [
 				"Keypad"
 			],
