--- a/com.aurum.rust-deck.sdPlugin/manifest.json
+++ b/com.aurum.rust-deck.sdPlugin/manifest.json
@@ -66,6 +66,22 @@
 					"TitleAlignment": "middle"
 				}
 			]
+		},
+		{
+			"Name": "Back",
+			"UUID": "com.aurum.rust-deck.back",
+			"Icon": "imgs/actions/back/icon",
+			"Tooltip": "Navigates back to the previous menu.",
+			"PropertyInspectorPath": "ui/back.html",
+			"Controllers": [
+				"Keypad"
+			],
+			"States": [
+				{
+					"Image": "imgs/actions/back/key",
+					"TitleAlignment": "middle"
+				}
+			]
 		}
 	],
 	"Category": "Rust Deck",
