Hide "Profile action"

--- a/com.aurum.rust-deck.sdPlugin/manifest.json
+++ b/com.aurum.rust-deck.sdPlugin/manifest.json
@@ -103,7 +103,7 @@
 					"TitleAlignment": "middle"
 				}
 			],
-			"VisibleInActionsList": true
+			"VisibleInActionsList": false
 		}
 	],
 	"Category": "Rust Deck",
