--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dependencies": {
         "@elgato/streamdeck": "^1.4.0",
         "@types/node-fetch": "^2.6.12",
-        "node-fetch": "^3.3.2"
+        "node-fetch": "^3.3.2",
+        "ws": "^8.18.3"
     }
 }
