--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
 		],
 		"module": "ES2022",
 		"moduleResolution": "Bundler",
+		"lib": ["ES2022", "DOM"],
 		"noImplicitOverride": true
 	},
 	"include": [
