feat: add join server action to Rust Deck plugin
Add new action that allows users to join a Rust server directly from Stream Deck. The action fetches server data periodically and provides a button to launch Rust with the correct server connection parameters. Includes UI, settings, and periodic update functionality.

--- a/com.aurum.rust-deck.sdPlugin/manifest.json
+++ b/com.aurum.rust-deck.sdPlugin/manifest.json
@@ -72,6 +72,23 @@
 			]
 		},
 		{
+			"Name": "Join Server",
+			"UUID": "com.aurum.rust-deck.join-server",
+			"Icon": "imgs/actions/join_server/icon",
+			"Tooltip": "Joins the server.",
+			"PropertyInspectorPath": "ui/join-server.html",
+			"Controllers": [
+				"Keypad"
+			],
+			"States": [
+				{
+					"Image": "imgs/actions/join_server/key",
+					"TitleAlignment": "middle",
+					"Title": "Join\nServer"
+				}
+			]
+		},
+		{
 			"Name": "Profile Action",
 			"UUID": "com.aurum.rust-deck.profile-action",
 			"Icon": "imgs/actions/profile_action/icon",
